# ess-prediction-project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: config.py
notebooks/: final_compare.ipynb
scripts/: run_feature_engineering.py  run_modeling.py  run_pipeline.py
src/: __init__.py  data_loader.py  feature_engineering.py  features.py  modeling.py  modeling_ori.py  modeling_ver2.py  preprocessing.py  visualized.py  visualizing.py
src/models/: predict.py
